--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -1,8 +1,15 @@
- // 全局样式文件
+// 全局样式文件
 
- // 加载图标样式
- @import "./icon.less";
+// 加载图标样式
+@import "./icon.less";
 
- body {
-   background-color: #f5f7f9;
- }
+body {
+  background-color: #f5f7f9;
+}
+.page-nav-bar {
+  background-color: #3296fa;
+  .van-nav-bar__title,
+  .van-icon {
+    color: #fff;
+  }
+}
